Fixed horizontal scroll issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 #root {
 	max-width: 1280px;
 	margin: 0 auto;
+	overflow-x: hidden;
 	padding: 20px;
 	text-align: center;
 }
